fixed some issue with validation

--- a/site/about.html
+++ b/site/about.html
@@ -444,7 +444,7 @@
                 <div class="formgroup">
                   <input type="submit" value="зарегистрироваться">
                 </div>
-                <div class="you-agree">Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг <br>(<a href="#">пользовательское соглашение</a>)</div>
+                <div class="you-agree">Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг <br>(<a href="#">пользовательское соглашение</a>)</div>
               </form>
             </div>
             <div class="call-to-register">Уже регистрировались? <a href="#enter-popup">Вход</a></div>
@@ -458,7 +458,7 @@
           </div>
           <div class="page-name">
             <h1>Добро пожаловать</h1>
-            <p>Добро пожаловать на портал, содействуйщий развитию инжиниринга и промышленного дизайна в России.</p>
+            <p>Добро пожаловать на портал, содействуйщий развитию инжиниринга и промышленного дизайна в России.</p>
           </div>
           <div class="main-left"><img src="img/content/about-page.png" alt="">
             <div class="tasks">
