--- a/site/disscus-item.html
+++ b/site/disscus-item.html
@@ -445,7 +445,7 @@
                 <div class="formgroup">
                   <input type="submit" value="зарегистрироваться">
                 </div>
-                <div class="you-agree">Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг <br>(<a href="#">пользовательское соглашение</a>)</div>
+                <div class="you-agree">Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг <br>(<a href="#">пользовательское соглашение</a>)</div>
               </form>
             </div>
             <div class="call-to-register">Уже регистрировались? <a href="#enter-popup">Вход</a></div>
@@ -586,19 +586,31 @@
               </div>
               <div class="bcon">
                 <div class="item">
-                  <div class="iname"><span class="quot"></span><span class="name">Трудно получить доступ к работе на этом оборудовании
-                      <div class="comments"><a href="#">51</a></div></span></div>
+                  <div class="iname">
+                    <div class="quot"></div>
+                    <div class="name">Трудно получить доступ к работе на этом оборудовании
+                      <div class="comments"><a href="#">51</a></div>
+                    </div>
+                  </div>
                   <div class="itext">Вениамин Ивановский в 13:45 <br>к <a href="#">Станок токарный с ЧПУ </a>в разделе <a href="#">ОБОРУДОВАНИЕ</a></div>
                 </div>
                 <div class="item">
-                  <div class="iname"><span class="quot"></span><span class="name">Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности
-                      <div class="comments"><a href="#">51</a></div></span></div>
+                  <div class="iname">
+                    <div class="quot"></div>
+                    <div class="name">Серия мастер-классов для студентов, аспирантов и молодых ученых по изучению метода анализа размерности
+                      <div class="comments"><a href="#">51</a></div>
+                    </div>
+                  </div>
                   <div class="itext">Вениамин Ивановский в 13:45 <br>к <a href="#">Станок токарный с ЧПУ </a>в разделе <a href="#">ОБОРУДОВАНИЕ</a></div>
                 </div>
                 <div class="item">
-                  <div class="iname"><span class="quot"></span><span class="name">Трудно получить доступ к работе на этом оборудовании
-                      <div class="comments"><a href="#">51</a></div></span></div>
-                  <div class="itext">Вениамин Ивановский в 13:45 <br>k<a href="#"> IX Международная конференция. «Аналитические и численные методы моделирования естественно–научных и социальных проблем» <br></a>в разделе <a href="#">СОБЫТИЯ</a></div>
+                  <div class="iname">
+                    <div class="quot"></div>
+                    <div class="name">Трудно получить доступ к работе на этом оборудовании
+                      <div class="comments"><a href="#">51</a></div>
+                    </div>
+                  </div>
+                  <div class="itext">Вениамин Ивановский в 13:45 <br>k<a href="#"> IX Международная конференция. «Аналитические и численные методы моделирования естественно–научных и социальных проблем» <br></a>в разделе <a href="#">СОБЫТИЯ</a></div>
                 </div>
               </div>
             </div>
