--- a/site/edit-interface.html
+++ b/site/edit-interface.html
@@ -429,7 +429,7 @@
                         </div>
                         <div class="formgroup articles__edit-lead">
                           <label>Лид</label>
-                          <textarea>В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».</textarea>
+                          <textarea>В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».</textarea>
                         </div>
                         <div class="formgroup articles__edit-text">
                           <label>Текст</label>
