--- a/site/events-item.html
+++ b/site/events-item.html
@@ -404,7 +404,7 @@
                 </div>
                 <p>В рамках «Гидроавиасалона-2014», который прошел в Геленджике, Минпромторгом, корпорацией Ростех и правительством Ростовской области был подписан меморандум о реализации инвестпроекта.</p>
                 <p>«Мы договорились о выделении участка земли на базе территории воинской части. Минобороны согласилось передать аэродром в эксплуатацию Ростеху, «Вертолетам России», — пояснил глава Минпромторга Денис Мантуров. </p>
-                <p>Бывший владелец холдинга «Связьстрой» Роман Троценко тоже получил предложение: «Были намеки, что продажа бизнеса поможет с заказами. Причем концерн хотели получить практически бесплатно». В «Связьстрой» входили три компании: «Связьстрой-5» (Челябинск), «Связьстрой-2» (Краснодар) и «Межгорсвязьстрой». Из-за кризиса их оборот тогда сократился до $250 млн, и Троценко решил выйти из бизнеса. Но не бесплатно: «Мы нашли другого покупателя — «Конверс груп».</p>
+                <p>Бывший владелец холдинга «Связьстрой» Роман Троценко тоже получил предложение: «Были намеки, что продажа бизнеса поможет с заказами. Причем концерн хотели получить практически бесплатно». В «Связьстрой» входили три компании: «Связьстрой-5» (Челябинск), «Связьстрой-2» (Краснодар) и «Межгорсвязьстрой». Из-за кризиса их оборот тогда сократился до $250 млн, и Троценко решил выйти из бизнеса. Но не бесплатно: «Мы нашли другого покупателя — «Конверс груп».</p>
               </div>
               <div class="event-organizers">
                 <div class="text">Российский государственный университет физической культуры, спорта, молодёжи и туризма, РГУФКСМиТ <br><a href="#">(все события этого организатора)</a>
