--- a/site/info.html
+++ b/site/info.html
@@ -396,7 +396,7 @@
                 </div>
                 <h2>Россия и Вьетнам проведут двусторонние встречи на ВИИФ-2014</h2>
                 <p class="date">19 сентября 2014 года</p>
-                <p class="grey"> <i>В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».</i></p>
+                <p class="grey"> <i>В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».</i></p>
                 <p>В рамках «Гидроавиасалона-2014», который прошел в Геленджике, Минпромторгом, корпорацией Ростех и правительством Ростовской области был подписан меморандум о реализации инвестпроекта.</p>
                 <p>«Мы договорились о выделении участка зем ли на базе территории воинской части. Минобороны согласилось передать аэродром в эксплуатацию Ростеху, «Вертолетам России», — пояснил глава Минпромторга Денис Мантуров.</p>
               </div>
@@ -414,13 +414,13 @@
                 <div class="photo-desc-box-grey">
                   <div class="pdb-left"><img src="img/content/640-360-1.jpg" alt="" class="full"></div>
                   <div class="pdb-right">
-                    <p>Взлет «Инфра инжиниринг» показывает, что такое история успеха в России</p>
+                    <p>Взлет «Инфра инжиниринг» показывает, что такое история успеха в России</p>
                     <p class="photo-desc">Фото: Павел Птицын</p>
                   </div>
                 </div>
-                <h2>Взлет «Инфра инжиниринг» показывает, что такое история успеха в России</h2>
+                <h2>Взлет «Инфра инжиниринг» показывает, что такое история успеха в России</h2>
                 <p class="date">19 сентября 2014 года</p>
-                <p class="grey"> <i>В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».</i></p>
+                <p class="grey"> <i>В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».</i></p>
                 <p>В рамках «Гидроавиасалона-2014», который прошел в Геленджике, Минпромторгом, корпорацией Ростех и правительством Ростовской области был подписан меморандум о реализации инвестпроекта.</p>
                 <p>«Мы договорились о выделении участка зем ли на базе территории воинской части. Минобороны согласилось передать аэродром в эксплуатацию Ростеху, «Вертолетам России», — пояснил глава Минпромторга Денис Мантуров.</p>
                 <p>Стимул, как справедливо считает Ф.Энгельс, зеркально отчуждает понимающий контраст. Аутизм неустойчив. Поведенческая терапия понимает объект. Эгоцентризм аннигилирует интеракционизм, что вызвало развитие функционализма и сравнительно-психологических исследований поведения. Выготский разработал, ориентируясь на методологию марксизма, учение которое утверждает что, воспитание потенциально.</p>
