--- a/site/links.html
+++ b/site/links.html
@@ -389,7 +389,7 @@
                 <div class="idesc">
                   <div class="name">Официальный сайт Минпромторг РФ</div>
                   <div class="site"> <a href="#">http://minpromtorg.gov.ru/</a></div>
-                  <div class="text">Официальный сайт Министерства промышленности и торговли Российской Федерации.Содержит новости, документы и прочая информация.</div>
+                  <div class="text">Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.</div>
                 </div>
                 <div class="igo"><a href="#"> </a></div>
               </div>
@@ -397,7 +397,7 @@
                 <div class="idesc">
                   <div class="name">Официальный сайт Минпромторг РФ</div>
                   <div class="site"> <a href="#">http://minpromtorg.gov.ru/</a></div>
-                  <div class="text">Официальный сайт Министерства промышленности и торговли Российской Федерации.Содержит новости, документы и прочая информация.</div>
+                  <div class="text">Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.</div>
                 </div>
                 <div class="igo"><a href="#"></a></div>
               </div>
@@ -405,7 +405,7 @@
                 <div class="idesc">
                   <div class="name">Официальный сайт Минпромторг РФ</div>
                   <div class="site"> <a href="#">http://minpromtorg.gov.ru/</a></div>
-                  <div class="text">Официальный сайт Министерства промышленности и торговли Российской Федерации.Содержит новости, документы и прочая информация.</div>
+                  <div class="text">Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.</div>
                 </div>
                 <div class="igo"><a href="#"> </a></div>
               </div>
@@ -413,7 +413,7 @@
                 <div class="idesc">
                   <div class="name">Официальный сайт Минпромторг РФ</div>
                   <div class="site"> <a href="#">http://minpromtorg.gov.ru/</a></div>
-                  <div class="text">Официальный сайт Министерства промышленности и торговли Российской Федерации.Содержит новости, документы и прочая информация.</div>
+                  <div class="text">Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.</div>
                 </div>
                 <div class="igo"><a href="#"></a></div>
               </div>
@@ -421,7 +421,7 @@
                 <div class="idesc">
                   <div class="name">Официальный сайт Минпромторг РФ</div>
                   <div class="site"> <a href="#">http://minpromtorg.gov.ru/</a></div>
-                  <div class="text">Официальный сайт Министерства промышленности и торговли Российской Федерации.Содержит новости, документы и прочая информация.</div>
+                  <div class="text">Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.</div>
                 </div>
                 <div class="igo"><a href="#"> </a></div>
               </div>
@@ -429,7 +429,7 @@
                 <div class="idesc">
                   <div class="name">Официальный сайт Минпромторг РФ</div>
                   <div class="site"> <a href="#">http://minpromtorg.gov.ru/</a></div>
-                  <div class="text">Официальный сайт Министерства промышленности и торговли Российской Федерации.Содержит новости, документы и прочая информация.</div>
+                  <div class="text">Официальный сайт Министерства промышленности и торговли Российской Федерации. Содержит новости, документы и прочая информация.</div>
                 </div>
                 <div class="igo"><a href="#">				</a></div>
               </div>
