--- a/site/results.html
+++ b/site/results.html
@@ -493,7 +493,7 @@
                   <li><a href="#">Программа для ЭВМ</a></li>
                   <li><a href="#">База данных</a></li>
                   <li><a href="#">Селекционное достижение</a></li>
-                  <li><a href="#">Топология интегральных  микросхем</a></li>
+                  <li><a href="#">Топология интегральных микросхем</a></li>
                   <li><a href="#">Ноу-хау</a></li>
                 </ul>
               </div>
