--- a/site/services-item.html
+++ b/site/services-item.html
@@ -412,7 +412,7 @@
                     <li>дюраметрические исследования</li>
                     <li>изучение прокаливаемости</li>
                     <li>микро/макро травление для выявления микро/макро структуры</li>
-                    <li>анализ и обработка изображений (структурных составляющих, неметаллических   включений, размер зерна и т.п.)</li>
+                    <li>анализ и обработка изображений (структурных составляющих, неметаллических включений, размер зерна и т.п.)</li>
                   </ul>
                 </p>
                 <p class="grey-without-strong"><strong>Основные возможности: </strong>Исследования образцов и изделий из сплавов черных и цветных металлов.</p>
