--- a/site/story-item.html
+++ b/site/story-item.html
@@ -444,7 +444,7 @@
                 <div class="formgroup">
                   <input type="submit" value="зарегистрироваться">
                 </div>
-                <div class="you-agree">Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг <br>(<a href="#">пользовательское соглашение</a>)</div>
+                <div class="you-agree">Нажимая на кнопку «Зарегистрироваться», вы подтверждаете свое согласия с условиями предоставления услуг <br>(<a href="#">пользовательское соглашение</a>)</div>
               </form>
             </div>
             <div class="call-to-register">Уже регистрировались? <a href="#enter-popup">Вход</a></div>
@@ -471,10 +471,10 @@
               </div>
               <div class="bcon bcon-text-style"><img src="img/content/slider-3.jpg" alt="" class="full">
                 <p class="photo-desc">Фото: Павел Птицын</p>
-                <p class="grey"> <i>В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».</i></p>
+                <p class="grey"> <i>В пригороде Ростова-на-Дону, в районе аэродрома Батайск, будет создан вертолетный кластер. Он включит в себя летно-испытательный комплекс, сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35 и перспективного среднего вертолета, а также центр по производству композитных лопастей и целый ряд других подразделений. О проекте пишет «Российская газета».</i></p>
                 <p>В рамках «Гидроавиасалона-2014», который прошел в Геленджике, Минпромторгом, корпорацией Ростех и правительством Ростовской области был подписан меморандум о реализации инвестпроекта.</p>
                 <p>«Мы договорились о выделении участка земли на базе территории воинской части. Минобороны согласилось передать аэродром в эксплуатацию Ростеху, «Вертолетам России», — пояснил глава Минпромторга Денис Мантуров. </p>
-                <p>Бывший владелец холдинга «Связьстрой» Роман Троценко тоже получил предложение: «Были намеки, что продажа бизнеса поможет с заказами. Причем концерн хотели получить практически бесплатно». В «Связьстрой» входили три компании: «Связьстрой-5» (Челябинск), «Связьстрой-2» (Краснодар) и «Межгорсвязьстрой». Из-за кризиса их оборот тогда сократился до $250 млн, и Троценко решил выйти из бизнеса. Но не бесплатно: «Мы нашли другого покупателя — «Конверс груп».</p>
+                <p>Бывший владелец холдинга «Связьстрой» Роман Троценко тоже получил предложение: «Были намеки, что продажа бизнеса поможет с заказами. Причем концерн хотели получить практически бесплатно». В «Связьстрой» входили три компании: «Связьстрой-5» (Челябинск), «Связьстрой-2» (Краснодар) и «Межгорсвязьстрой». Из-за кризиса их оборот тогда сократился до $250 млн, и Троценко решил выйти из бизнеса. Но не бесплатно: «Мы нашли другого покупателя — «Конверс груп».</p>
                 <div class="photo-desc-box">
                   <div class="pdb-left">
                     <p>Сборочное производство вертолетов типа Ми-26, Ми-28, Ми-35</p>
@@ -490,7 +490,7 @@
                 <p>&nbsp;</p>
                 <h3>Второй успех</h3>
                 <p>Группа «Инфра» была создана на базе активов «Телеком МТК», сообщила «Инфра». Бизнес «Телеком МТК» унаследовала компания «Регионстрой», которая сейчас является крупнейшей в группе по выручке.</p>
-                <p> <img src="img/content/slider-3.jpg" alt="" style="float:right; width:300px; margin:0 0 15px 15px;">Вторая по выручке компания в группе «Инфра» — московский «Союз-телефонстрой». «Инфра» признает, что владеет лишь 20% этой компании. Но де-факто у группы все 100%, сказано в ее презентации (Огороднов, впрочем, говорит, что презентация не является подлинной; см. врез «История с презентацией»). Однако и Счетная палата в отчете о проверке «Связьинвеста» тоже включила «Союз-телефонстрой» в группу «Инфра». В июле 2010 г. Огороднов возглавил совет директоров «Союз-телефонстроя», а его жена Татьяна Огороднова вошла в ревизионную комиссию.</p>
+                <p> <img src="img/content/slider-3.jpg" alt="" style="float:right; width:300px; margin:0 0 15px 15px;">Вторая по выручке компания в группе «Инфра» — московский «Союз-телефонстрой». «Инфра» признает, что владеет лишь 20% этой компании. Но де-факто у группы все 100%, сказано в ее презентации (Огороднов, впрочем, говорит, что презентация не является подлинной; см. врез «История с презентацией»). Однако и Счетная палата в отчете о проверке «Связьинвеста» тоже включила «Союз-телефонстрой» в группу «Инфра». В июле 2010 г. Огороднов возглавил совет директоров «Союз-телефонстроя», а его жена Татьяна Огороднова вошла в ревизионную комиссию.</p>
               </div>
               <div class="bmetabot">
                 <div class="share"><span>Поделиться</span>
