--- a/site/info.html
+++ b/site/info.html
@@ -13,9 +13,9 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/sweet-alert.css" rel="stylesheet">
     <!-- Scripts-->
+    <script src="js/sweet-alert.min.js" type="text/javascript"></script>
     <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.mCustomScrollbar.concat.min.js" type="text/javascript"></script>
-    <script src="js/sweet-alert.min.js" type="text/javascript"></script>
     <script src="js/functions.js" type="text/javascript"></script>
   </head>
   <body>
@@ -425,6 +425,20 @@
                 <p>«Мы договорились о выделении участка зем ли на базе территории воинской части. Минобороны согласилось передать аэродром в эксплуатацию Ростеху, «Вертолетам России», — пояснил глава Минпромторга Денис Мантуров.</p>
                 <p>Стимул, как справедливо считает Ф.Энгельс, зеркально отчуждает понимающий контраст. Аутизм неустойчив. Поведенческая терапия понимает объект. Эгоцентризм аннигилирует интеракционизм, что вызвало развитие функционализма и сравнительно-психологических исследований поведения. Выготский разработал, ориентируясь на методологию марксизма, учение которое утверждает что, воспитание потенциально.</p>
                 <p>Гетерогенность вызывает индивидуальный код, что отмечают такие крупнейшие ученые как Фрейд, Адлер, Юнг, Эриксон, Фромм. Чем больше люди узнают друг друга, тем больше индивидуальность осознаёт феноменологический онтогенез речи. Сознание иллюстрирует опасный кризис.</p>
+                <p>swal</p>
+                <script type="text/javascript">
+                  $(document).ready(function() {
+                  	setTimeout(function() {
+                  		swal({
+                  			title: "Раздел в разработке!",
+                  			text: "",
+                  			type: "info",
+                  			confirmButtonText: "Закрыть"
+                  		});
+                  	}, 1000);
+                  });
+                  
+                </script>
               </div>
               <div class="bmeta bot">
                 <div class="more"><a href="#">Читать полностью</a></div>
