upd search page

--- a/site/search.html
+++ b/site/search.html
@@ -378,9 +378,7 @@
         <div class="main-width main-wrap">
           <div class="pathway">
             <ul>
-              <li>
-                <!--TODO: change to button--><a href="#">Расширенный поиск</a>
-              </li>
+              <li><a href="#">Расширенный поиск</a></li>
             </ul>
           </div>
           <div class="form-holder">
@@ -400,30 +398,38 @@
               </div>
               <div class="form-filter-2">
                 <h4>В разделах <a href="#">(4)</a></h4>
-                <input id="analytic-article" type="checkbox" name="radio">
-                <label for="analytic-article">Аналитические статьи</label>
-                <input id="successful-history" type="checkbox" name="radio">
-                <label for="successful-history">Истории успеха</label>
-                <input id="organizations" type="checkbox" name="radio">
-                <label for="organizations">Организации</label>
-                <input id="developments" type="checkbox" name="radio">
-                <label for="developments">События</label>
-                <input id="discussion" type="checkbox" name="radio">
-                <label for="discussion">Дискуссии</label>
-                <input id="news" type="checkbox" name="radio">
-                <label for="news">Новости</label>
-                <input id="needs" type="checkbox" name="radio">
-                <label for="needs">Потребности</label>
-                <input id="links" type="checkbox" name="radio">
-                <label for="links">Ссылки</label>
-                <input id="documents" type="checkbox" name="radio">
-                <label for="documents">Документы</label>
-                <input id="equipment" type="checkbox" name="radio">
-                <label for="equipment">Оборудование</label>
-                <input id="rid" type="checkbox" name="radio">
-                <label for="rid">РИД</label>
-                <input id="services" type="checkbox" name="radio">
-                <label for="services">Услуги</label>
+                <div class="col">
+                  <input id="analytic-article" type="checkbox" name="radio">
+                  <label for="analytic-article">Аналитические статьи</label>
+                  <input id="discussion" type="checkbox" name="radio">
+                  <label for="discussion">Дискуссии</label>
+                  <input id="documents" type="checkbox" name="radio">
+                  <label for="documents">Документы</label>
+                </div>
+                <div class="col">
+                  <input id="successful-history" type="checkbox" name="radio">
+                  <label for="successful-history">Истории успеха</label>
+                  <input id="news" type="checkbox" name="radio">
+                  <label for="news">Новости</label>
+                  <input id="equipment" type="checkbox" name="radio">
+                  <label for="equipment">Оборудование</label>
+                </div>
+                <div class="col">
+                  <input id="organizations" type="checkbox" name="radio">
+                  <label for="organizations">Организации</label>
+                  <input id="needs" type="checkbox" name="radio">
+                  <label for="needs">Потребности</label>
+                  <input id="rid" type="checkbox" name="radio">
+                  <label for="rid">РИД</label>
+                </div>
+                <div class="col">
+                  <input id="developments" type="checkbox" name="radio">
+                  <label for="developments">События</label>
+                  <input id="links" type="checkbox" name="radio">
+                  <label for="links">Ссылки</label>
+                  <input id="services" type="checkbox" name="radio">
+                  <label for="services">Услуги</label>
+                </div>
               </div><a href="#" class="btn-orange-wide inline">Искать</a>
             </form>
           </div>
@@ -435,7 +441,6 @@
             </div>
             <div class="serp-result">
               <ul>
-                <!--TODO make in loop-->
                 <li>
                   <h4>В разделе «Новости»<a href="#"> (23)</a></h4>
                   <p>в рамках <span class="bold">программы</span> обновления автопарка продано более 10 тысяч автомобилей</p>
