upd organizations-item to new design

--- a/site/organizations-item.html
+++ b/site/organizations-item.html
@@ -593,6 +593,26 @@
               </div>
               <div class="bcon">
                 <div class="item">
+                  <div class="iname"> <a href="#">Станок токарный с ЧПУ</a></div>
+                  <div class="itext">Микроскопия, анализ химического состава</div>
+                  <div class="irating mar-bot-10"><span>Лаборатория</span>
+                    <ul>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li class="star"></li>
+                      <li></li>
+                      <li></li>
+                    </ul>
+                  </div>
+                  <div class="itext-ext">
+                    <p class="sm-mar"><span class="dark"> Выполняемые работы<br> </span><span class="grey">Оптическая микроскопия.</span></p>
+                    <p class="sm-mar"> <span class="dark"> Выполняемые работы<br> </span><span class="grey">Оптическая микроскопия.</span></p>
+                  </div>
+                  <div class="itext-ext"><a href="#">Национальный исследовательский Томский политехнический университет</a></div>
+                  <div class="contacts-box"><span class="phone">+7 495 675 87 98</span><span class="email"><a href="#" class="grey-link">email@email.com</a></span></div>
+                  <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count empty"></span></a></div>
+                </div>
+                <div class="item">
                   <div class="iname"> <a href="#">Выставка научного оборудования НИИ спорта РГУФКСМиТ</a></div>
                   <div class="irating mar-bot-10"><span>EBV-23</span>
                     <ul>
@@ -644,22 +664,6 @@
                   </div>
                   <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования. <br></div>
                   <div class="itext-ext"><span class="dark">Организация (ВУЗ / ГНЦ): </span><a href="#">Национальный исследовательский Томский политехнический университет</a></div>
-                  <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count empty"></span></a></div>
-                </div>
-                <div class="item">
-                  <div class="iname"> <a href="#">Станок токарный с ЧПУ</a></div>
-                  <div class="itext">Микроскопия, анализ химического состава</div>
-                  <div class="irating irating_margin2">
-                    <ul>
-                      <li class="star"></li>
-                      <li class="star"></li>
-                      <li class="star"></li>
-                      <li></li>
-                      <li></li>
-                    </ul>
-                  </div>
-                  <div class="itext">10 ноября 2014 года в лаборатории комплексных исследований НИИ спорта РГУФКСМиТ состоится выставка научного оборудования. <br></div>
-                  <div class="itext-ext"><span class="dark"> Организация: </span><span class="grey">(ВУЗ / ГНЦ): </span><a href="#">Национальный исследовательский Томский политехнический университет</a></div>
                   <div class="tags"><a href="#" class="tags-item"><span class="name">Машиностроение</span><span class="count">12</span></a><a href="#" class="tags-item"><span class="name">Металлообработка</span><span class="count empty"></span></a></div>
                 </div>
               </div>
